--- a/app/views/loans/edit.html.erb
+++ b/app/views/loans/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Editing Loan</h1>
 
-<%= render 'form', loan: @loan %>
+<%= render partial: 'loans/form', locals: { loan: @loan, new_user: @new_user, add_new_user: @add_new_user } %>
