--- a/app/views/creditors/_user_loans.html.erb
+++ b/app/views/creditors/_user_loans.html.erb
@@ -7,7 +7,8 @@
          <a id="add_aqui" role="button" aria-pressed="true" class="add_payment btn btn-warning float-right" data-dialogpath="<%=new_loan_payment_path(loan)%>">Abono</a>
       <% end %>
       <% unless loan.paied? %>
-      Abono de: <%= number_to_currency(loan.next_amount_payment) %><br/>
+      Abono de: <%= number_to_currency(loan.next_amount_payment) %>
+      Resta: <%= number_to_currency(loan.balance) %><br/>
       <%= pluralize(loan.payments.count, 'pago') %>
       <% end %>
       <% if loan.delayed? %>
