--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -17,7 +17,12 @@
   <div class="row">
     <div class="form-group col-md-4 col-sm-12">
       <%= form.label :moneylender_id %>
+      <% if current_user.admin? %>
       <%= form.collection_select :moneylender_id, Moneylender.order(:alias), :id, :alias, {include_blank: false}, {:class=>"form-control"} %>
+      <% else %>
+      <%= form.hidden_field :moneylender_id %>
+      <%= loan.moneylender.alias%>
+      <% end %>
     </div>
 
     <div class="form-group col-md-4 col-sm-12">
