Add export rake task

--- a/app/views/admin/moneylenders/index.html.erb
+++ b/app/views/admin/moneylenders/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Moneylenders</h1>
 
-<table>
-  <thead>
+<table class="table table-striped table-hover">
+  <thead class="thead-dark">
     <tr>
       <th>Alias</th>
       <th>Usuario</th>
