--- a/app/views/admin/loan_types/index.html.erb
+++ b/app/views/admin/loan_types/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Loan Types</h1>
 
-<table>
-  <thead>
+<table class="table table-striped table-hover">
+  <thead class="thead-dark">
     <tr>
       <th>Short name</th>
       <th>Description</th>
