add buttons to export

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -24,3 +24,11 @@
       <span class="p-3 btn btn-light "><%= link_to 'Users', admin_users_path %></span>
    </div>
 </div>
+<div class="row g-5">
+   <div class="col-md-3 text-center">
+      <span class="p-3 btn btn-light "><%= link_to 'Export Payments', admin_export_payments_path %></span>
+   </div>
+   <div class="col-md-3 text-center">
+      <span class="p-3 btn btn-light "><%= link_to 'Export Loans', admin_export_loans_path %></span>
+   </div>
+</div>
