--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <div id="overlay"> 
+    <div class="mx-auto spinner">...</div>
+    </div>
     <div class="container-fluid">
     <% if user_signed_in? %>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
