--- a/app/views/admin/loan_types/new.html.erb
+++ b/app/views/admin/loan_types/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Loan Type</h1>
 
-<%= render 'form', loan_type: @loan_type %>
+<%= render 'form', loan_type: @loan_type, action:"create" %>
 
 <%= link_to 'Back', admin_loan_types_path %>
