--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -37,6 +37,10 @@
   </div>
 
   <div class="row">
+    search_users: <input id="search_users" class="form-control">
+  </div>
+
+  <div class="row">
 
     <div class="form-group col-md-4 col-sm-12 ">
       <%= form.label :loan_type_id %>
