--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 
   <body>
     <div id="overlay"> 
-    <div class="mx-auto spinner">...</div>
+    <div class="mx-auto spinner">&nbsp;</div>
+    <h1>Cargando...</h1>
     </div>
     <div class="container-fluid">
     <% if user_signed_in? %>
