--- a/app/views/creditors/_loans_users.html.erb
+++ b/app/views/creditors/_loans_users.html.erb
@@ -6,6 +6,7 @@
           <div class="p-3 border 
             <%="bg-danger  text-white" if user.delayed?(session[:money_lender_id]) %>
             <%="bg-success text-white" if user.paied?(session[:money_lender_id]) %>
+            <%="bg-warning text-white" if user.coming?(session[:money_lender_id]) %>
             <%="bg-primary text-white" if user.ok?(session[:money_lender_id]) %>">
             <b><%= user.complete_name %></b><br/>
             <small><%= pluralize(user.loans.where( moneylender_id: session[:money_lender_id]).count, 'prestamo')  %> <b>&#x02C5;</b></small>
