--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -36,9 +36,9 @@
     </div>
   </div>
 
-  <div class="row">
+  <!--div class="row">
     search_users: <input id="search_users" class="form-control">
-  </div>
+  </div-->
 
   <div class="row">
 
@@ -46,9 +46,11 @@
       <%= form.label :loan_type_id %>
       <%= form.collection_select :loan_type_id, LoanType.order(:short_name), :id, :short_name, {include_blank: false}, {:class=>"form-control"} %>
     </div>
-    <div id="collapseListUser" class="form-group col-md-4 col-sm-8 collapse multicollapseNewUser <%='show' if @add_new_user !='true'%>">
+    <div id="collapseListUser" class="form-group col-md-4 col-sm-4 collapse multicollapseNewUser <%='show' if @add_new_user !='true'%>">
       <%= form.label :user_id %>
-      <%= form.collection_select :user_id, User.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control"} %>
+      <%= form.hidden_field :user_id %>
+      <input id="search_users" class="form-control" placeholder="Buscar cliente....">
+      <!--%= form.collection_select :user_id, User.order(:id), :id, :name, {include_blank: false}, {:class=>"form-control"} %-->
     </div>
     <div class="form-group col-md-4 col-sm-4 ">
       <button id="btn_add_new_user_in_loan" class="float-right btn btn-light" type="button" data-target=".multicollapseNewUser" data-toggle="collapse" aria-expanded="false" aria-controls="collapseNewUser collapseListUser">
