--- a/app/views/creditors/_loans_users.html.erb
+++ b/app/views/creditors/_loans_users.html.erb
@@ -1,5 +1,5 @@
 <% if @users.any? %>
-  <% @users.each_with_index do |user, index| %>
+  <% @users.order('users.name').each_with_index do |user, index| %>
     <% if index%6 == 0 && index>0 %></div><% end %>
     <% if index%6 == 0 %><div class="row g-5"><% end %>
         <div class="user_loans_item col-xs-4 col-md-3 col-lg-2 col-xl" data-user="<%=user.id%>" data-lender="<%=session[:money_lender_id]%>">
