--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -16,21 +16,64 @@
       <th scope="col"><%=t('payment.table.profit')%></th>
       <th scope="col"><%=t('payment.table.payment')%></th>
       <th scope="col"><%=t('payment.table.status')%></th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
     </thead>
     <tbody>
-    <% @loan.payments.order('id').each_with_index do |payment,i| %>
+    <% @loan.payments.parents.order('id').each_with_index do |payment,i| %>
+
       <tr>
-        <th scope="row"><%= i+1 %> </th>
+        <th scope="row">
+          <% if payment.children? %>
+          <a data-toggle="collapse" href="#collapseChildrenPayment_<%= payment.id %>" role="button" aria-expanded="false" aria-controls="collapseChildrenPayment_<%= payment.id %>"> + <%= i+1 %> </a>
+          <% else %> 
+          <%= i+1 %>
+          <% end %> 
+        </th>
         <td><%= payment.payment_date %></td>
         <td><b><%= number_to_currency(payment.amount) %></b></td>
         <td><%= number_to_currency(payment.profit) %></td>
         <td><%= number_to_currency(payment.payment_to_borrowed) %></td>
         <td><%= payment.status.name %></td>
-        <td><%= link_to t('payment.edit'), edit_loan_payment_path(@loan,payment)   if @can_user_edit%></td>
+        <td>
+          <%= link_to t('payment.add_abono'),  loan_new_subpayment_path(@loan, payment.id), class: "btn btn-primary"  unless payment.is_complete? %>
+          <%= link_to t('payment.edit'), edit_loan_payment_path(@loan,payment)   if payment.is_complete? && @can_user_edit%>
+        </td>
         <td><%= link_to t('payment.destroy_payment'), [@loan, payment], method: :delete, data: { confirm: 'Are you sure?' }   if @can_user_edit %></td>
       </tr>
+        <% if payment.children? %>
+        <tr id="collapseChildrenPayment_<%= payment.id %>" class="card-title collapse">
+          <td></td>
+          <td colspan="9">
+            <table class="table table-sm">
+              <thead>
+                <tr>
+                  <th scope="col"><%=t('payment.table.date')%></th>
+                  <th scope="col"><%=t('payment.table.amount')%></th>
+                  <th scope="col"><%=t('payment.table.profit')%></th>
+                  <th scope="col"><%=t('payment.table.payment')%></th>
+                  <th scope="col"><%=t('payment.table.status')%></th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% payment.children.each do |child| %>
+                <tr>
+                  <td><%= child.payment_date %></td>
+                  <td><b><%= number_to_currency(child.amount) %></b></td>
+                  <td><%= number_to_currency(child.profit) %></td>
+                  <td><%= number_to_currency(child.payment_to_borrowed) %></td>
+                  <td><%= child.status.name %></td>
+                  <td><%= link_to t('payment.edit'), edit_loan_payment_path(@loan,child)   if @can_user_edit%></td>
+                  <td><%= link_to t('payment.destroy_payment'), [@loan, child], method: :delete, data: { confirm: 'Are you sure?' }   if @can_user_edit %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        <% end %>
+      
      <% end %>
     </tbody>
   </table>
