--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= loan.moneylender.alias %></td>
         <td><%= loan.status.name %></td>
         <td><%= loan.user.email %></td>
-        <td><%= loan.loan_type.short_name %></td>
+        <td><%= loan.description %></td>
         <td><%= loan.amount_borrowed %></td>
         <td><%= loan.balance %></td>
         <td><%= loan.loan_date %></td>
