--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%=t('add_new_loan')%></h1>
 
-<%= render partial: 'loans/form', locals: { loan: @loan, new_user: @new_user, add_new_user: @add_new_user } %>
+<%= render partial: 'loans/form', locals: { loan: @loan, new_user: @new_user, add_new_user: @add_new_user, loan_types: @loan_types } %>
