--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -59,7 +59,7 @@
   <a class="card-header" data-toggle="collapse" href="#collapseDetallePrestamo" role="button" aria-expanded="false" aria-controls="collapseDetallePrestamo">
     Detalle del prestamo
   </a></small>
-  
+
   <div id="collapseDetallePrestamo" class="card collapse">
     <div class="row card-body">
       <div class="form-group col-2">
@@ -97,12 +97,14 @@
 
   <div class="card" >
     <h5 class="card-header"><%= form.label :user_id%></h5>
-
+    <div class="form-group col-md-3 col-sm-6">
+    <%=loan.user.complete_name unless loan.user.nil?%>
+    </div>
     <div class="row card-body form-inline">
       <div id="collapseListUser" class="form-group col-md-9 col-sm-6 collapse multicollapseNewUser <%='show' if @add_new_user !='true'%>">
         
         <%= form.hidden_field :user_id %>
-        <input id="search_users" class="form-control" placeholder="Buscar cliente....">
+        <input id="search_users" class="form-control" placeholder="Buscar cliente...." >
       </div>
       <div class="form-group col-md-3 col-sm-6 ">
         <button id="btn_add_new_user_in_loan" class="btn btn-light" type="button" data-target=".multicollapseNewUser" data-toggle="collapse" aria-expanded="false" aria-controls="collapseNewUser collapseListUser">
