--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -19,7 +19,11 @@
     <div class="form-group col-md">
       <%= form.label :amount %>
       <%= form.text_field :amount, :class=>"form-control" %>
+
+      <input type="checkbox" id="autocalculate" value="" checked="<%=@autocalculate%>">
+      <label for="autocalculate"><%=t(:autocalcular)%></label>
     </div>
+    
 
     <div class="form-group col-md">
       <%= form.label :payment_date %>
@@ -30,7 +34,7 @@
   <div class="row">
     <div class="form-group col-md">
       <%= form.label :profit %>
-      <%= form.text_field :profit, :class=>"form-control-sm form-control-plaintext" %>
+      <%= form.text_field :profit, :class=>"form-control-sm form-control-plaintext", :data => { :original => payment.profit } %>
     </div>
 
     <div class="form-group  col-md">
