--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Editing Payment</h1>
 
-<%= render partial: 'form', locals:{ payment: @payment, backpath: loan_path(@loan)} %>
+<%= render partial: 'form', locals:{ payment: @payment, backpath: loan_path(@loan)}, autocalculate: @autocalculate %>
