--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -36,7 +36,7 @@
         <td><%= number_to_currency(payment.payment_to_borrowed) %></td>
         <td><%= payment.status.name %></td>
         <td>
-          <%= link_to t('payment.add_abono'),  loan_new_subpayment_path(@loan, payment.id), class: "btn btn-primary"  unless payment.is_complete? %>
+          <%= link_to t('payment.add_abono'),  loan_new_subpayment_path(@loan, payment.id), class: "btn btn-primary"  if !payment.is_complete? || @loan.is_profit_balane %>
           <%= link_to t('payment.edit'), edit_loan_payment_path(@loan,payment)   if payment.is_complete? && @can_user_edit%>
         </td>
         <td><%= link_to t('payment.destroy_payment'), [@loan, payment], method: :delete, data: { confirm: 'Are you sure?' }   if @can_user_edit %></td>
