--- a/app/views/creditors/_loans_users.html.erb
+++ b/app/views/creditors/_loans_users.html.erb
@@ -4,13 +4,25 @@
     <% if index%6 == 0 %><div class="row g-5"><% end %>
         <div class="user_loans_item col-xs-4 col-md-3 col-lg-2 col-xl" data-user="<%=user.id%>" data-lender="<%=session[:money_lender_id]%>">
           <div class="p-3 border 
-            <%="bg-danger  text-white" if user.delayed?(session[:money_lender_id]) %>
-            <%="bg-success text-white" if user.paied?(session[:money_lender_id]) %>
-            <%="bg-warning text-white" if user.coming?(session[:money_lender_id]) %>
-            <%="bg-primary text-white" if user.ok?(session[:money_lender_id]) %>">
+            <%= case session[:filter_loan]
+                when "active"
+                  "bg-primary  text-white"
+                when "delayed"
+                  "bg-danger  text-white"
+                when "coming"
+                  "bg-warning  text-white"
+                when "aware"
+                  "bg-info  text-white"
+                when "paied"
+                  "bg-success  text-white"
+                when "close"
+                  "bg-secondary  text-white"
+                else 
+                  "btn-outline-primary"
+                end %>">
             <b><%= user.complete_name %></b>
             <div class="d-inline-flex">
-              <b><small><%= pluralize(user.loans.where( moneylender_id: session[:money_lender_id]).count, 'prestamo')  %> &#x02C5;</small></b>
+              <b><small><%= pluralize(loans.where(user_id: user.id).count, 'prestamo')  %> &#x02C5;</small></b>
             </div>
             <div class="loans_detail row">
             </div>
