--- a/app/views/creditors/_user_loans.html.erb
+++ b/app/views/creditors/_user_loans.html.erb
@@ -1,7 +1,7 @@
 
 <% @loans.active.each do |loan| %>
    <div class="col-md p-2">
-      <div class="p-2 btn-light show_detail_loan" data-loanpath="<%=loan_path(loan)%>">
+      <div class="p-2 btn-<%=loan.get_color_name%> show_detail_loan" data-loanpath="<%=loan_path(loan)%>">
       <%= number_to_currency(loan.amount_borrowed) %>
       <%= t(loan.status_text) %><br>
       <% if loan.delayed? %>
@@ -28,7 +28,7 @@
    <div class="col-12 p-2">
       <div class="row p-2">
          <% @loans.no_active.each do |loan| %>
-            <div class="col m-1 p-1 btn-light border border-dark show_detail_loan" data-loanpath="<%=loan_path(loan)%>">
+            <div class="col m-1 p-1 btn-<%=loan.get_color_name%> show_detail_loan" data-loanpath="<%=loan_path(loan)%>">
             <small><%= number_to_currency(loan.amount_borrowed) %>
             <%= t(loan.status_text) %></small>
             </div>
