--- a/app/views/client/show.html.erb
+++ b/app/views/client/show.html.erb
@@ -2,9 +2,13 @@
 <div class="card">
    <div class="card-body">
       <div class="card-title"><h1><%=@client.complete_name%></h1></div>
-
+      <div class="float-right">
+         <%= link_to t(:enviar_invitacion), client_send_invitation_path, class: "btn btn-secondary btn-sm" %>
+         <%= link_to t(:editar), edit_admin_user_path(@client), class: "btn btn-secondary btn-sm" %>
+      </div>
       <p class="card-text">
          <%=@client.email%>
+         
       </p>
       <p class="card-text">
          <span><%=t(:ultimo_acceso)%>: <%=@client.last_sign_in_at%>(<%=@client.last_sign_in_ip%>)</span>
